# race

./: CLI_SETTINGS_GUIDE.md  DEBUG_GUIDE.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS.md  FINAL_SUCCESS.md  GITHUB_PAGES_SETUP.md  README.md  TRACK_CREATION_GUIDE.md  WEB_DEPLOYMENT.md  WEB_STATUS.md  build_web.py  car.py  controls.py  copilot-instructions.md  create_sprites.py  create_track.py  dev.py  dev_new.py  dev_old.py  game_settings.py  main.py  main_desktop.py  main_final_web.py  main_minimal_web.py  main_universal.py  main_web.py  main_web_debug.py  main_web_fixed.py  play.sh  pyproject.toml  quick_serve.py  requirements.txt  serve_game.py  settings.py  settings_interface.py  simple_racing.py  test_game.py  test_minimal.py  test_simple_web.py  test_super_simple.py  (+4 more)
.github/workflows/: deploy.yml
web_template/: index.html
